fix DZ_4