@@ -1,5 +1,6 @@
 package com.demoqa.constants;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -13,7 +14,7 @@ public class UserTestData {
     public static final String USER_DATA_OF_BIRTH = "12";
     public static final String USER_MONTH_OF_BIRTH = "April";
     public static final String USER_YEAR_OF_BIRTH = "1995";
-    public static final List<String> USER_SUBJECTS = List.of("Maths", "Hindi");
+    public static final List<String> USER_SUBJECTS = Arrays.asList("Maths", "Hindi");
     public static final String USER_PHOTO_PATH = "src/test/resources/img.png";
     public static final String USER_CURRENT_ADDRESS = "Brighton Beach of the New York";
     public static final String USER_STATE = "NCR";
